--- a/designer/balqis.html
+++ b/designer/balqis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang - Balqis Amanda Putri H</title>
-    <link rel="stylesheet" href="../designer/css/profile.css">
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
     </header>
     <div class="container">
         <div class="card">
-            <img src="../designer/gambar/Balqis.jpg" alt="Foto Profil Balqis">
+            <img src="gambar/Balqis.jpg" alt="Foto Profil Balqis">
             <h1>Data Diri</h1>
             <p>
                 Nama Lengkap: Balqis Amanda Putri Hambali<br>
