--- a/designer/index.html
+++ b/designer/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelompok1 - Website Profil</title>
-    <link rel="stylesheet" href="../designer/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
 
   <body>
@@ -31,7 +31,7 @@
         <ul>
           <li>
             <a href="afiq.html">
-              <img src="../designer/gambar/Afiq.jpg" alt="Afiq">
+              <img src="gambar/Afiq.jpg" alt="Afiq">
               <h3 >Afiq Galuh Setya Ramadhani</h3>
               <p>Ketua/Programmer di Kelompok1</p>
             </a>
