--- a/designer/kontak.html
+++ b/designer/kontak.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontak Anggota Kelompok 1</title>
-    <link rel="stylesheet" href="../designer/css/about.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
     <div class="container">
   
         <div class="card">
-            <img src="../designer/gambar/Afiq.jpg" alt="Profil Anggota 1">
+            <img src="gambar/Afiq.jpg" alt="Profil Anggota 1">
             <div>
                 <h2>Afiq Galuh Setya Ramadhani</h2>
                 <p>Email: afiqgaluh@gmail.com</p>
@@ -30,7 +30,7 @@
         </div>
 
         <div class="card">
-            <img src="../designer/gambar/Balqis.jpg" alt="Profil Anggota 2">
+            <img src="gambar/Balqis.jpg" alt="Profil Anggota 2">
             <div>
                 <h2>Balqis Amanda Putri Hambali</h2>
                 <p>Email: balqissph@gmail.com</p>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="card">
-            <img src="../designer/gambar/Shaffa.jpg" alt="Profil Anggota 3">
+            <img src="gambar/Shaffa.jpg" alt="Profil Anggota 3">
             <div>
                 <h2>Shaffa Dwiaji Feryansyah Putra</h2>
                 <p>Email: shaffa232@gmail.com</p>
