--- a/designer/tentang.html
+++ b/designer/tentang.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang Anggota Kelompok 1</title>
-    <link rel="stylesheet" href="../designer/css/about.css">
+    <link rel="stylesheet" href="css/about.css">
 </head>
 <body>
     <header>
@@ -20,21 +20,21 @@
     <div class="members">
         <div class="card">
             <a href="afiq.html">
-                <img src="../designer/gambar/Afiq.jpg" alt="Afiq">
+                <img src="gambar/Afiq.jpg" alt="Afiq">
                 <h1>Afiq Galuh Setya Ramadhani</h1>
                 <p>Ketua / Programmer</p>
             </a>
         </div>
         <div class="card">
             <a href="balqis.html">
-                <img src="../designer/gambar/Balqis.jpg" alt="Balqis">
+                <img src="gambar/Balqis.jpg" alt="Balqis">
                 <h1>Balqis Amanda Putri Hambali</h1>
                 <p>Anggota / Tester</p>
             </a>
         </div>
         <div class="card">
             <a href="shaffa.html">
-                <img src="../designer/gambar/Shaffa.jpg" alt="Shaffa">
+                <img src="gambar/Shaffa.jpg" alt="Shaffa">
                 <h1>Shaffa Dwiaji Feryansyah Putra</h1>
                 <p>Anggota / Designer</p>
             </a>
