--- a/designer/afiq.html
+++ b/designer/afiq.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tentang - Afiq Galuh Setya R</title>
-    <link rel="stylesheet" href="../designer/css/profile.css">
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
     </header>
     <div class="container">
         <div class="card">
-            <img src="../designer/gambar/Afiq.jpg" alt="Foto Profil Afiq Galuh Setya R">
+            <img src="gambar/Afiq.jpg" alt="Foto Profil Afiq Galuh Setya R">
             <h1>Data Diri</h1>
             <p>
                 Nama Lengkap: Afiq Galuh Setya R<br>
